--- a/ml/CMakeLists.txt
+++ b/ml/CMakeLists.txt
@@ -1,11 +1,18 @@
 cmake_minimum_required(VERSION 3.0.0 FATAL_ERROR)
 
+set(CMAKE_CXX_COMPILER "/usr/bin/g++")
 project(ML-CPP)
 message(${CMAKE_CURRENT_SOURCE_DIR})
+
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib)
 
 add_executable(main main.cpp)
 
 message(${CMAKE_CURRENT_SOURCE_DIR})
 
+add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/tqdm_like/")
+
 target_include_directories(main INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}/nn/")
-target_include_directories(main INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}/layer/")
+target_include_directories(main INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}/matrix/")
+target_link_libraries(main tqdm_like)
