add sanitizer check

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,11 @@
 cmake_minimum_required(VERSION 3.0.0 FATAL_ERROR)
 
 set(CMAKE_CXX_COMPILER "/usr/bin/g++")
+add_compile_options(-fsanitize=address)
+add_link_options(-fsanitize=address)
 project(ML-CPP)
 message(${CMAKE_CURRENT_SOURCE_DIR})
+
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib)
